Fixed contrast issue and added links

--- a/chamber/styles/small.css
+++ b/chamber/styles/small.css
@@ -12,10 +12,10 @@ main {
 }
 
 a{
-    color: #FFE8D6;
+    color: white;
 }
 a:visited {
-    color: #FFE8D6;
+    color: white;
 }
 
 
